--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Aerial by HTML5 UP</title>
+		<title>Gadzhibala.me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -28,7 +28,7 @@
 							<div <a class="link" href="projects/">Projects</a></div>
 							<ul>
 								<li><a href="https://www.facebook.com/hadzhik" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://github.com/gadzhi" class="icon fa-github"><span class="label">Github</span></a></li>
 								
 							</ul>
 						</nav>
