--- a/index.html
+++ b/index.html
@@ -22,13 +22,22 @@
 
 				<!-- Header -->
 					<header id="header">
+						<div class="col-md-12">
+							<figure>
+								<img src="images/profile_img.png" alt="Free HTML5 Wesbite Template by FreeHTML5.co">
+							</figure>
+						</div>
 						<h1>Gadzhibala Pirmagomedov</h1>
-						<p>Developer &nbsp;&bull;&nbsp; RestoBot &nbsp;&bull;&nbsp; Never asked for this</p>
+
+						<p>Developer &nbsp;&bull;&nbsp; CEO RestoBot</p>
 						<nav>
-							<div <a class="link" href="projects/">Projects</a></div>
+							<div <a class="link" href="projects/">Projects</a>
+
+							</div>
 							<ul>
 								<li><a href="https://www.facebook.com/hadzhik" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/gadzhi" class="icon fa-github"><span class="label">Github</span></a></li>
+
 								
 							</ul>
 						</nav>
