--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
 						</div>
 						<h1>Gadzhibala Pirmagomedov</h1>
 
-						<p>Developer &nbsp;&bull;&nbsp; CEO RestoBot</p>
+						<p><b>Software Developer &nbsp;&bull;&nbsp; CEO RestoBot</b></p>
 						<nav>
-							<div <a class="link" href="projects/">Projects</a>
-
-							</div>
+							<p><a href="restobot.html"><b>RestoBot Presentation</b></a></p>
 							<ul>
 								<li><a href="https://www.facebook.com/hadzhik" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/gadzhi" class="icon fa-github"><span class="label">Github</span></a></li>
