--- a/restobot.html
+++ b/restobot.html
@@ -23,7 +23,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>RestoBot Presentation</h1>
-						<iframe src="https://docs.google.com/presentation/d/17MNnczdqoA1xwAO46fHuu4zjNywhGTKM1bWAQuTO56w/embed?start=false&loop=true&delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+						<iframe src="https://docs.google.com/presentation/d/17MNnczdqoA1xwAO46fHuu4zjNywhGTKM1bWAQuTO56w/embed?start=false&loop=true&delayms=5000" frameborder="0" width="100%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 					</header>
 
 
