Add RestoBot presentation

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 					<header id="header">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/profile_img.png" alt="Free HTML5 Wesbite Template by FreeHTML5.co">
+								<img src="images/profile_img.png" alt="Gadzhibala Pirmagomedov">
 							</figure>
 						</div>
 						<h1>Gadzhibala Pirmagomedov</h1>
 
 						<p><b>Software Developer &nbsp;&bull;&nbsp; CEO RestoBot</b></p>
 						<nav>
-							<p><a href="restobot.html"><b>RestoBot Presentation</b></a></p>
+							<p><a href="https://docs.google.com/presentation/d/17MNnczdqoA1xwAO46fHuu4zjNywhGTKM1bWAQuTO56w/edit?usp=sharing"><b>RestoBot Presentation</b></a></p>
 							<ul>
 								<li><a href="https://www.facebook.com/hadzhik" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/gadzhi" class="icon fa-github"><span class="label">Github</span></a></li>
