Add RestoBot presentation

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 							<ul>
 								<li><a href="https://www.facebook.com/hadzhik" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/gadzhi" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/gadzhibala/?locale=en_US" class="icon fa-linkedin"><span class="label">Github</span></a></li>
+
 
 								
 							</ul>
