--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 						<p><b>Software Developer &nbsp;&bull;&nbsp; CEO RestoBot</b></p>
 						<nav>
-							<p><a href="https://docs.google.com/presentation/d/17MNnczdqoA1xwAO46fHuu4zjNywhGTKM1bWAQuTO56w/edit?usp=sharing"><b>RestoBot Presentation</b></a></p>
+							<a href="https://restobot.io" class="button24">Restobot.io</a>
 							<ul>
 								<li><a href="https://www.facebook.com/hadzhik" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/gadzhi" class="icon fa-github"><span class="label">Github</span></a></li>
